[package]
name = "espeaker"
version = "0.1.6"
license = "MIT"
authors = ["Eitan Isaacson <eitan@monotonous.org>"]
description = "eSpeak NG playback library"
keywords = ["espeak-ng", "audio", "tts", "speech", "rodio"]
repository = "https://github.com/eeejay/espeaker"
edition = "2021"

[dependencies]
espeakng-sys = "= 0.2.0"
rodio = "0.20.1"
lazy_static = "1.4.0"
readonly = "0.2"
